Fixed number vertical middle aligning

--- a/src/components/Square.css
+++ b/src/components/Square.css
@@ -5,7 +5,6 @@
 }
 
 .square-text {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+    line-height: 55px;
+    color: lightyellow;
 }
